# realmforge

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  realm_proposal.yml
.github/workflows/: ci.yml  release.yml  security.yml  semantic-release.yml
app/: cli.py
app/concepts/: retrieval.py
app/data_build/: build_cohort.py  cohort_query.sql
app/encoders/: dataset.py  train_encoder.py
app/energy_graph/: train_energy.py
app/features/: build_dataset.py
app/harness/: generator.py
app/jepa/: model.py  train_jepa.py
app/rollout/: simulator.py
app/serving/: app.py  benchmark.py
app/tokenization/: events.py
app/transition/: outcome_heads.py  train_transition.py
app/wm_app/core/: config_loader.py
app/wm_app/models/: encoder.py  jepa.py  outcomes.py  transition.py
configs/: base.yaml
configs/backbone/: base.yaml
data_build/: build_cohort.py
docs/: branch-protection.md  quality-gates.md
docs/plans/: 2026-04-27-hf-ebwm-implementation-plan.md
domains/_realm_template/configs/: domain.yaml
domains/_realm_template/mappings/: schema.md
domains/_realm_template/pipelines/: README.md
domains/clinical_hf/mappings/: schema.md
encoders/: patient_encoder.py  train_encoder.py
energy_graph/: model.py  train_energy.py
eval/: metrics.py
examples/hello-world/: README.md  run.py
examples/supply-chain-mini/: README.md  run.py
features/: build_dataset.py  window_builder.py
jepa/: losses.py  train_jepa.py
realms/_realm_template/concepts/: seed_concepts.yaml
realms/clinical_hf/configs/: domain.yaml
realms/financial_template/configs/: domain.yaml
reports/: limitations.md  model_card.md
rollout/: simulator.py
serving/: app.py  benchmark.py
tests/: test_config_inheritance.py  test_energy.py  test_eval.py  test_rollout.py
transition/: model.py  train_transition.py
wm_app/models/: energy.py
